--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BeerItUpCompose</string>
+    <string name="app_name">BeerItUpNEW</string>
     <string name="menu_btn_one">Select desired beer</string>
     <string name="menu_btn_two">Add beer you have bought</string>
     <string name="menu_btn_three">Overview of payments</string>
