Finished Start Screen merge

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,26 @@
     <string name="add_beers">Add beers</string>
     <string name="create_user">Create User</string>
     <string name="log_books">Log Books</string>
+
+    <string name="min6chars_placeholder">Min. 6 characters</string>
+    <string name="adminPin">PIN for admin privileges</string>
+    <string name="minPinChars_placeholer">4 – 8 digits</string>
+    <string name="sharedPassword">Your shared password</string>
+    <string name="createKitchenNamePlaceholder">E.G. ST-Lige</string>
+    <string name="createKitchenName">Your Unique Kitchen Name</string>
+    <string name="createKitchenHeader">Create New Kitchen</string>
+    <string name="c8UserPassword">Your Password</string>
+    <string name="phone_placerholder">22 XX XX XX</string>
+    <string name="yourPhone">Your Phone Number</string>
+    <string name="name_placeholder">E.G. Sille T-42</string>
+    <string name="username">Your Username</string>
+    <string name="createUserTitle">Create Your Account</string>
+    <string name="youPin">Your personal pin</string>
+    <string name="password">********</string>
+    <string name="userSignIn">User Sign In</string>
+    <string name="createKithen">CREATE KITCHEN</string>
+    <string name="createUser">CREATE USER</string>
+    <string name="signIn">SIGN IN</string>
+    <string name="KitchenSignIn">Kitchen Sign In</string>
+    <string name="imgurl">https://beeritupstorage.blob.core.windows.net/</string>
 </resources>
